kubernetes/istio/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-helloworld
spec:
  gateways:
  - gw-helloworld
  hosts:
  - helloworld.test.domain
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: greeter-server
        port:
          number: 7788
